# zone-sniper

./: .ai-master-ignore  .geminiignore  .gitignore  Cargo.toml  LICENSE.md  README.md  index.html  pairs.txt
.github/workflows/: deploy.yaml
docs/: glossary.md  spec.md
docs/WASM/: web_demo.md
docs/journeys/: journey_spec.md  journey_spec_future.md  reconcile.md  theoretical_model.md
docs/technical/: ai_technical.md  buffers.md  discontinuous_ranges.md  interval_switching.md  multi_pair_triggers.md  threading.md
docs/ui/: simulation.md  trade_ui.md  ui.md
docs/zones/: key zones.md  zone_scoring.md
kline_data/: demo_prices.json
src/: lib.rs  main.rs
src/analysis/: mod.rs  multi_pair_monitor.rs  pair_analysis.rs  zone_scoring.rs
src/config/: analysis.rs  binance.rs  debug.rs  demo.rs  mod.rs  persistence.rs  plot.rs
src/data/: mod.rs  pre_main_async.rs  price_stream.rs
src/data/timeseries/: bnapi_version.rs  cache_file.rs  intervals.rs  mod.rs  serde_version.rs  wasm_demo.rs
src/data/timeseries/bnapi_version/: bn_kline.rs  raw_ohlcv.rs
src/domain/: auto_duration.rs  candle.rs  mod.rs  pair_interval.rs  price_horizon.rs
src/engine/: core.rs  messages.rs  mod.rs  state.rs  worker.rs
src/journeys/: decay_calibration.rs  journey.rs  mod.rs  zone_efficacy.rs
src/models/: cva.rs  mod.rs  pair_context.rs  timeseries.rs  trading_view.rs
src/ui/: app.rs  app_async.rs  app_journeys.rs  app_simulation.rs  app_state.rs  app_triggers.rs  config.rs  mod.rs  plot_layers.rs  styles.rs  ui_panels.rs  ui_plot_view.rs  ui_render.rs  ui_text.rs  utils.rs
src/utils/: app_time.rs  maths_utils.rs  mod.rs  time_utils.rs
