[package]
name = "klines"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
autobins = false # Disable automatic binary discovery (so need list bins explicitly below)

# Set default bin name
default-run = "official"

# Library target for tests and benchmarks
[lib]
name = "klines"
path = "src/lib.rs"

[[bin]]
name="official"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tokio = "1.48"
tracing = "0.1.41"
binance-sdk = { version = "27.0", features = ["spot"] }
chrono = "0.4"
futures = "0.3.31"
rayon = "1.11.0"
itertools = "0.14.0"
serde = { version = "1.0.2", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3" # Fails to build with 2.0
async-trait = "0.1.89"
clap ={ version = "4.5.49", features = ["derive"] }
argminmax = { version = "0.6.3", default-features = false, features = ["float"] }
eframe = { version = "0.33.2", features = ["persistence"] }
sort-const = "1.0.1"
statrs = "0.18.0"
strum = "0.27.2"
strum_macros = "0.27"
egui_plot = "0.34.0"
colorgrad = "0.8"
poll-promise = "0.3"
env_logger = "0.11.8"
log = "0.4.28"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
find_peaks = "0.1.5"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
getrandom02 = { package = "getrandom", version = "0.2.16", features = ["js"] }
